# nalu-wind

./: .buildinfo  .clang-format  .dockerignore  .gitignore  .gitmodules  .readthedocs.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  Debug  Dockerfile  LICENSE  README.md  Release  ReleaseWhOpenFAST  genindex.html  index.html  nalu-wind-gcc.sh  nalu.C  objects.inv  search.html  searchindex.js  unit_tests.C  zrefs.html
examples/: CMakeLists.txt  README.md  nalu_input_fileX
examples/abl_neutral/: abl_plot_example.py  abl_plots.py  abl_preprocess.yaml  abl_simulation.yaml  generate_simulation_input_file.py  generate_simulation_input_file_backup.py  nalu_input_fileX  pre_process.sh  setUp.yaml  set_up.yaml  setup.yaml
examples/filtered_lifting_line/: CMakeLists.txt
examples/turbine_uniform_inflow/: CMakeLists.txt  alm_preprocess.yaml  alm_simulation.yaml  nrel5mw2.fst  set_up.yaml  setup.yaml
examples/wind_farm/: CMakeLists.txt  case_1_precursor_preprocess.yaml  case_1_precursor_simulation.yaml  case_1_setup_abl_precursor.yaml  case_2_abl_precursor_boundary_data.yaml  case_2_boundary_data_preprocess.yaml  case_2_setup_abl_precursor_boundary_data.yaml  case_3_preprocess.yaml  case_3_setup_wind_farm.yaml  case_3_wind_farm.yaml  setup_abl_precursor.yaml  setup_abl_precursor_boundary_data.yaml
include/: ABLProfileFunction.h  AMSAlgDriver.h  Actuator.h  ActuatorDiskFAST.h  ActuatorFAST.h  ActuatorLineFAST.h  ActuatorLinePointDrag.h  Adapter.h  AlgTraits.h  Algorithm.h  AlgorithmDriver.h  ArrayND.h  AssembleContinuityElemOpenSolverAlgorithm.h  AssembleContinuityElemSolverAlgorithm.h  AssembleContinuityInflowSolverAlgorithm.h  AssembleContinuityNonConformalSolverAlgorithm.h  AssembleCourantReynoldsElemAlgorithm.h  AssembleEdgeSolverAlgorithm.h  AssembleElemSolverAlgorithm.h  AssembleElemSolverAlgorithmHO.h  AssembleFaceElemSolverAlgorithm.h  AssembleHeatCondIrradWallSolverAlgorithm.h  AssembleHeatCondWallSolverAlgorithm.h  AssembleMomentumEdgeABLTopBC.h  AssembleMomentumEdgeOpenSolverAlgorithm.h  AssembleMomentumEdgeWallFunctionSolverAlgorithm.h  AssembleMomentumElemABLWallFunctionSolverAlgorithm.h  AssembleMomentumElemOpenSolverAlgorithm.h  AssembleMomentumElemSolverAlgorithm.h  AssembleMomentumElemSymmetrySolverAlgorithm.h  AssembleMomentumElemWallFunctionSolverAlgorithm.h  AssembleMomentumNonConformalSolverAlgorithm.h  AssembleNDotVGradElemAlgorithm.h  AssembleNDotVNonConformalAlgorithm.h  AssembleNGPNodeSolverAlgorithm.h  AssembleNodalGradAlgorithmDriver.h  AssembleNodalGradBoundaryAlgorithm.h  AssembleNodalGradEdgeAlgorithm.h  AssembleNodalGradElemAlgorithm.h  AssembleNodalGradNonConformalAlgorithm.h  (+196 more)
include/actuator/: Actuator.h  ActuatorBladeDistributor.h  ActuatorBulk.h  ActuatorBulkDiskFAST.h  ActuatorBulkFAST.h  ActuatorBulkSimple.h  ActuatorDiskFAST.h  ActuatorExecutor.h  ActuatorExecutorsFASTNgp.h  ActuatorExecutorsSimpleNgp.h  ActuatorFAST.h  ActuatorFLLC.h  ActuatorFunctors.h  ActuatorFunctorsFAST.h  ActuatorFunctorsSimple.h  ActuatorGenericSearchFunctor.h  ActuatorInfo.h  ActuatorLineFAST.h  ActuatorLineFASTNgp.h  ActuatorLineSimple.h  ActuatorModel.h  ActuatorNGP.h  ActuatorParsing.h  ActuatorParsingFAST.h  ActuatorScalingFLLC.h  ActuatorSearch.h  ActuatorSimple.h  ActuatorTypes.h  UtilitiesActuator.h
include/aero/: AeroContainer.H  AeroContainer.h
include/edge_kernels/: AMSMomentumEdgePecletAlg.h  AMSUpwindEdgeAlg.h  AssembleAMSEdgeKernelAlg.h  AssembleEdgeKernelAlg.h  AssembleTAMSEdgeKernelAlg.h  ContinuityEdgeSolverAlg.h  ContinuityOpenEdgeKernel.h  EdgeKernel.h  EdgeKernelUtils.h  MomentumABLWallFuncEdgeKernel.h  (+17 more)
src/: ABLProfileFunction.C  AMSAlgDriver.C  Actuator.C  ActuatorDiskFAST.C  ActuatorFAST.C  ActuatorLineFAST.C  ActuatorLinePointDrag.C  Adapter.C  Algorithm.C  AlgorithmDriver.C  AssembleContinuityEdgeOpenSolverAlgorithm.C  AssembleContinuityEdgeSolverAlgorithm.C  AssembleContinuityElemOpenSolverAlgorithm.C  AssembleContinuityElemSolverAlgorithm.C  AssembleContinuityInflowSolverAlgorithm.C  AssembleContinuityNonConformalSolverAlgorithm.C  AssembleCourantReynoldsElemAlgorithm.C  AssembleEdgeSolverAlgorithm.C  AssembleElemSolverAlgorithm.C  AssembleElemSolverAlgorithmHO.C  AssembleFaceElemSolverAlgorithm.C  AssembleHeatCondIrradWallSolverAlgorithm.C  AssembleHeatCondWallSolverAlgorithm.C  AssembleMomentumEdgeABLTopBC.C  AssembleMomentumEdgeABLWallFunctionSolverAlgorithm.C  AssembleMomentumEdgeOpenSolverAlgorithm.C  AssembleMomentumEdgeSolverAlgorithm.C  AssembleMomentumEdgeSymmetrySolverAlgorithm.C  AssembleMomentumEdgeWallFunctionSolverAlgoirthm.C  AssembleMomentumEdgeWallFunctionSolverAlgorithm.C  AssembleMomentumElemABLWallFunctionSolverAlgorithm.C  AssembleMomentumElemOpenSolverAlgorithm.C  AssembleMomentumElemSolverAlgorithm.C  AssembleMomentumElemSymmetrySolverAlgorithm.C  AssembleMomentumElemWallFunctionSolverAlgoirthm.C  AssembleMomentumNonConformalSolverAlgorithm.C  AssembleNDotVGradElemAlgorithm.C  AssembleNDotVNonConformalAlgorithm.C  AssembleNGPNodeSolverAlgorithm.C  AssembleNodalGradAlgorithmDriver.C  (+182 more)
unit_tests/: CMakeLists.txt  StkSimdComparisons.h  UnitTest1ElemCoordCheck.C  UnitTestABLWallFunction.C  UnitTestActuatorBulk.C  UnitTestActuatorDiskFAST.C  UnitTestActuatorFASTGaussian.C  UnitTestActuatorNGP.C  UnitTestActuatorNGP.h  UnitTestActuatorParsing.C  UnitTestArrayND.C  UnitTestBasicKokkos.C  UnitTestCopyAndInterleave.C  UnitTestCreateMemoryLeak.C  UnitTestCreateOnDevice.C  UnitTestCylinderMesh.C  UnitTestEigenDecomposition.C  UnitTestElemDataRequests.C  UnitTestElemSuppAlg.C  UnitTestElementDescription.C  UnitTestFieldManager.C  UnitTestFieldRegistry.C  UnitTestFieldUtils.C  UnitTestFieldUtils.h  UnitTestGetDofStatus.C  UnitTestHOMasterElements.C  UnitTestHelperObjects.h  UnitTestHex27FaceNodeOrdering.C  UnitTestHexElementPromotion.C  UnitTestHexMasterElements.C  UnitTestHexMasterElementsNgp.C  UnitTestHexSCVDeterminant.C  UnitTestInitialConditions.C  UnitTestIntegrationRule.C  UnitTestKokkosME.C  UnitTestKokkosME.h  UnitTestKokkosMEBC.C  UnitTestKokkosMEBC.h  UnitTestKokkosMEGold.h  UnitTestKokkosParallelFor.C  (+46 more)
(+11224 files in other folders)
